--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #111;
+    color: #BBB;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #302010;
+    color: #444;
     padding: 20px;
     text-align: center;
 }
@@ -17,7 +19,7 @@ main {
 }
 
 h1, h2 {
-    color: #333;
+    color: #AAA;
 }
 
 p {
@@ -25,8 +27,8 @@ p {
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #302010;
+    color: #A0A0A0;
     text-align: center;
     padding: 10px;
     position: sticky;
@@ -39,8 +41,8 @@ footer {
     border-radius: 10px;
 }
 .tab button {
-    background-color: #d15b25; /* Dull orange */
-    color: #fff; /* White text */
+    background-color: #4d220f; /* Dull orange */
+    color: #C0C0C0; /* White text */
     float: left;
     border: none;
     outline: none;
@@ -59,5 +61,5 @@ footer {
 }
 
 img {
-    
+    border-radius: 30px;
 }
