--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin: 10px;
     padding: 0;
     background-color: #111;
     color: #BBB;
